# altmol

./: README.md  pyproject.toml  tox.ini
.github/workflows/: check.yml  publish-to-pypi.yml  publish-to-testpypi.yml  tox.yml
altmol/: chem.py  main.py  plot.py
notebooks/: aizynthfinder_templates.ipynb  aizythfinder_top_templates.csv
tests/: test_main.py
