[tool.poetry]
name = "altmol"
version = "0.2.1"
description = ""
authors = ["Tagir Akhmetshin <tagirshin@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.9,<3.13"
altair = "^5"
pandas = ">=2.1"
numpy = ">=1.25"
rdkit = "^2023.9.6"


[tool.poetry.group.dev.dependencies]
black = "^24"
jupyterlab = "^4"
ipywidgets = "^8"
pytest = ">6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
